# pingsix

./: .dockerignore  .gitignore  Cargo.toml  DEPENDENCY_REFACTORING_GUIDE.md  Dockerfile  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  USER_GUIDE.md  config.yaml  migration_demo.rs  rust-toolchain.toml
.github/workflows/: rust.yml
ci/: config.smoke.yaml
docs/: DNS_CONTROL_PLANE_IMPLEMENTATION_PLAN.md  GRAPH_GUARD_MIGRATION.md  PRODUCTION_READINESS_PLAN.md
examples/: new_architecture_example.rs
src/: lib.rs  main.rs  migration.rs  new_main.rs
src/admin/: mod.rs
src/config/: etcd.rs  mod.rs
src/core/: container.rs  context.rs  error.rs  loader.rs  mod.rs  plugin.rs  registry.rs  status.rs  tests.rs  traits.rs
src/logging/: mod.rs
src/orchestration/: executor.rs  lifecycle.rs  mod.rs  router.rs
src/plugin/: adapter.rs  brotli.rs  cache.rs  cors.rs  echo.rs  fault_injection.rs  file_logger.rs  grpc_web.rs  gzip.rs  ip_restriction.rs  jwt_auth.rs  key_auth.rs  limit_count.rs  manager.rs  mod.rs  prometheus.rs  proxy_rewrite.rs  redirect.rs  request_id.rs  traffic_split.rs
src/plugins/: basic_auth.rs  brotli.rs  cache.rs  cors.rs  csrf.rs  echo.rs  fault_injection.rs  file_logger.rs  grpc_web.rs  gzip.rs  ip_restriction.rs  jwt_auth.rs  key_auth.rs  limit_count.rs  mod.rs  prometheus.rs  proxy_rewrite.rs  rate_limit.rs  redirect.rs  request_id.rs  response_rewrite.rs  traffic_split.rs
src/proxy/: adapters.rs  control_plane.rs  discovery.rs  event.rs  global_rule.rs  graph_mutation.rs  health_check.rs  lb.rs  mod.rs  new_route.rs  new_service.rs  new_upstream.rs  plugin.rs  route.rs  router.rs  runtime.rs  service.rs  ssl.rs  sync.rs  upstream.rs
src/proxy/plugin/: brotli.rs  echo.rs  grpc_web.rs  gzip.rs  ip_restriction.rs  key_auth.rs  limit_count.rs  mod.rs  prometheus.rs  proxy_rewrite.rs  rate_limit.rs  redirect.rs
src/proxy/testdata/: example.crt  example.key  other.key
src/proxy/upstream/: discovery.rs  health_check.rs  load_balancer.rs  mod.rs
src/service/: http.rs  mod.rs  new_http.rs  status.rs
src/utils/: request.rs  response.rs
tests/: admin_graph_cas.rs  cache_isolation.rs  dns_preparation.rs  etcd_control_plane.rs  graceful_shutdown.rs  graceful_shutdown_etcd.rs  plugin_order.rs  protocol_defaults.rs  static_defaults.rs  static_dns_boot.rs  tls_handshake.rs
tests/common/: mod.rs
