[package]
name = "pingsix"
version = "0.1.0"
edition = "2021"

[features]
default = []
new-architecture = []

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.83"
base64 = "0.22.1"
bytes = "1.8.0"
dashmap = "6.1.0"
env_logger = { version = "0.11.5", features = ["unstable-kv"] }
etcd-client = "0.16.1"
futures = "0.3.31"
hickory-resolver = "0.25.2"
http = "1.1.0"
ipnetwork = { version = "0.21.1", features = ["serde"] }
jsonwebtoken = "9.3.1"
log = { version = "0.4.22", features = ["kv"] }
matchit = "0.8.4"
once_cell = "1.20.2"
pingora = { version = "0.6.0", features = ["openssl", "sentry"] }
pingora-cache = "0.6.0"
pingora-core = "0.6.0"
pingora-error = "0.6.0"
pingora-http = "0.6.0"
pingora-limits = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-proxy = "0.6.0"
pingora-runtime = "0.6.0"
prometheus = "0.14.0"
rand = "0.9.2"
regex = "1.11.1"
sentry = "0.36"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["fs"] }
uuid = { version = "1.16.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
