[package]
name = "pingsix"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.42"
base64 = "0.22.1"
bytes = "1.0"
dashmap = "5"
env_logger = { version = "0.11.5", features = ["unstable-kv"] }
etcd-client = { version = "0.18.0", features = ["tls"] }
futures = "0.3"
hmac = "0.12.1"
hex = "0.4"
hickory-resolver = "0.25.2"
http = "1"
ipnetwork = { version = "0.21.1", features = ["serde"] }
jsonwebtoken = "9.3.1"
libc = "0.2"
log = { version = "0.4", features = ["kv"] }
matchit = "0.8.4"
once_cell = "1"
pingora = { version = "0.8.1", features = ["openssl", "sentry"] }
pingora-cache = "0.8.1"
pingora-core = "0.8.1"
pingora-error = "0.8.1"
pingora-http = "0.8.1"
pingora-limits = "0.8.1"
pingora-load-balancing = "0.8.1"
pingora-proxy = "0.8.1"
pingora-runtime = "0.8.1"
prometheus = "0.13"
rand = "0.8"
regex = "1.11.1"
sentry = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
# serde_yml is the actively maintained fork of the unmaintained serde_yaml 0.9.
serde_yml = "0.0.12"
sha2 = "0.10.9"
subtle = "2.6.1"
tokio = { version = "1.41.1", features = ["fs", "rt", "time", "sync"] }
tokio-util = "0.7"
uuid = { version = "1.16.0", features = ["v4"] }
url = "2.5"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
etcd-client = { version = "0.18.0", features = ["tls"] }
jsonwebtoken = "9.3.1"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
lto = "thin"
strip = "symbols"
